kubernetes/hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: hello-impl:1.0-SNAPSHOT
          # Remove for a real project, the image is picked up locally for the integration test
          imagePullPolicy: Never
          livenessProbe:
            httpGet:
              path: /alive
              port: 8558
            initialDelaySeconds: 120
            timeoutSeconds: 3
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /ready
              port: 8558
            initialDelaySeconds: 120
            timeoutSeconds: 3
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 5
          ports:
            - containerPort: 9000
              name: "http"
---
apiVersion: v1
kind: Service
metadata:
  name: hello-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
      - name: http
        port: 80
        targetPort: 9000
